(dirs :standard \ node_modules)

(alias
 (name all)
 (deps
  (alias_rec after-melange)))

(rule
 (alias after-melange)
 (targets
  (dir dist))
 (deps
  (package meleange)
  (alias_rec meleange)
  (source_tree public))
 (action
  (progn
   (system "mkdir dist")
   (system "cp ./public/* dist/")
   (system "rsync -r ./output/src/* dist/src/")
   (system "rsync -r ./output/node_modules/* dist/node_modules/")
   (system "importmap/generate.exe output dist/app.importmap")
   (system
    "importmap/inject.exe dist/app.importmap dist/index.template.html dist/index.html"))))

(melange.emit
 (target output)
 (alias meleange)
 (libraries app)
 (module_systems
  (es6 mjs)))
